After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755463 - spectrum: Sending magnitude instead of phase in message for Phase info
spectrum: Sending magnitude instead of phase in message for Phase info
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal blocker
: 1.6.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-23 12:19 UTC by Vikram Fugro
Modified: 2015-09-23 13:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Attaching the patch (904 bytes, patch)
2015-09-23 12:23 UTC, Vikram Fugro
none Details | Review
Attaching the patch (919 bytes, patch)
2015-09-23 12:29 UTC, Vikram Fugro
committed Details | Review

Description Vikram Fugro 2015-09-23 12:19:15 UTC
Most likely a typo.

.....
.....
 if (spectrum->message_phase) {
    gst_spectrum_message_add_array (pcv, ----> cd->spect_magnitude <---- , 
    spectrum->bands);
 }
.....
.....
Comment 1 Vikram Fugro 2015-09-23 12:23:55 UTC
Created attachment 311941 [details] [review]
Attaching the patch
Comment 2 Vikram Fugro 2015-09-23 12:29:54 UTC
Created attachment 311943 [details] [review]
Attaching the patch

Minor change in the commit message from the last patch.
Comment 3 Stefan Sauer (gstreamer, gtkdoc dev) 2015-09-23 13:40:22 UTC
Oh my, thanks for the patch.
Comment 4 Sebastian Dröge (slomo) 2015-09-23 13:41:46 UTC
commit 3c2044168deebf75cbb2b9131322cc19762bd026
Author: Vikram Fugro <vikram.fugro@gmail.com>
Date:   Wed Sep 23 17:43:51 2015 +0530

    spectrum: send phase values in the GstMessage for Phase info
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755463