spectrum: send phase values in the GstMessage for Phase info

https://bugzilla.gnome.org/show_bug.cgi?id=755463